--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+*{
+  scroll-behavior: smooth;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -18,6 +21,10 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
+  scroll-behavior: smooth;
+
+ 
 }
 
 @layer utilities {
